added butterknife and character count

--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -16,6 +16,12 @@ android:layout_height="match_parent">
         tools:context=".TimelineActivity">
 
 
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swipeContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvTweet"
             android:layout_width="0dp"
@@ -26,6 +32,8 @@ android:layout_height="match_parent">
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
 
     </android.support.constraint.ConstraintLayout>
@@ -38,7 +46,6 @@ android:layout_height="match_parent">
         android:layout_margin="18dp"
         android:clickable="true"
         app:maxImageSize="57dp"
-        android:onClick="composeButtonClicked"
         android:src="@drawable/vector_compose_shortcut"
         app:layout_anchor="@id/clTimeline"
         app:layout_anchorGravity="bottom|right|end" />
